--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Footer from "../components/Footer";
     <About />
     <FeaturedProjects />
     <OtherProjects />
-    <Contact />
+    <Contact client:load />
     <Footer />
   </main>
 </Layout>
