--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,10 +34,8 @@ const { title } = Astro.props;
   }
 
   body {
+    font-family: "Archivo Variable", sans;
     background-image: url("/bg.jpg");
     background-attachment: fixed;
-    font-family: "Archivo Variable";
   }
 </style>
-
-<!-- Archivo, Inter variable,  -->
